# palmari

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: DESCRIPTION.md  config.yml
docs/: conf.py  data.rst  examples.rst  index.rst  napari.rst  pipeline.rst  requirements.txt
docs/api/: modules.rst  palmari.data_structure.rst  palmari.processing.rst  palmari.processing.steps.rst  palmari.quot.rst  palmari.rst  palmari.tif_tools.rst
examples/: drift_bead.ipynb  first-pipeline.ipynb  load-pipeline.ipynb  minimalist-pipeline.ipynb  pipeline-1.ipynb  pipeline-2.ipynb  single_acquisition.ipynb
examples/tests/: test.ipynb
src/palmari/: __init__.py  _runner.py  _widget.py  napari.yaml
src/palmari/_tests/: test_widget.py
src/palmari/data_structure/: acquisition.py  experiment.py
src/palmari/image_tools/: correct_drift.py  density_filtering.py  localization.py
src/palmari/processing/: __init__.py  edit_pipeline_window.py  image_pipeline.py  image_pipeline_widget.py  tif_pipeline.py  tif_pipeline_widget.py  utils.py
src/palmari/processing/steps/: __init__.py  base.py  default_localizer.py  drift_corrector.py  quot_localizer.py  quot_tracker.py  trackpy_tracker.py  window_percentile.py
src/palmari/quot/: __init__.py  findSpots.py  helper.py  plot.py  read.py  subpixel.py  track.py
src/palmari/tif_tools/: cell_mask.py  correct_drift.py  density_filtering.py  intensity.py  localization.py
