[metadata]
name = palmari
version = 0.0.1
author = Hippolyte Verdier
author_email = hverdier@pasteur.fr
url = https://github.com/hippover/palmari
license = MIT
description = A processing pipeline for PALM movies analysis (pre-processing, localization, drifft correction, tracking)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/hippover/palmari/issues
    Documentation = https://github.com/hippover/palmari#README.md
    Source Code = https://github.com/hippover/palmari
    User Support = https://github.com/hippover/palmari/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    magicgui
    qtpy
    dask==2022.1.0
    dask-image==2021.12.0
    tiffile
    matplotlib>=3.5
    scikit-image>=0.18.3
    trackpy == 0.5.0
    pandas


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points] 
napari.manifest = 
    palmari = palmari:napari.yaml
